--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,29 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
+<div class="header">
+  <h1>Vishwas C</h1>
+  <h2>Creator of awesomeness</h2>
+  <p class="tagline">
+    <h3>welcome to this dummy page</h3>
+    <p>some para</p>
+  </p>
+</div>
   Welcome to the HTML Portfolio Project
-
+<div class="skills">
+  <h3>Some of my skills</h3>
+  <p>Mad skills here down below!!!</p>
+  <ul>
+    <li>React</li>
+    <li>Redux</li>
+    <li>Relay</li>
+    <li>GraphQL</li>
+    <li>HTML</li>
+  </ul>
+</div>
+<div class="contact">
+  <h3>Contact</h3>
+  <p>Let's see......<a href="www.google.com">go here!!</a></p>
+</div>
 </body>
 </html>
