--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
 <div class="header">
   <h1>Vishwas C</h1>
   <h2>Creator of awesomeness</h2>
-  <p class="tagline">
-    <h3>welcome to this dummy page</h3>
-    <p>some para</p>
-  </p>
+  <div class="tagline">
+    <h3>Welcome to this dummy page</h3>
+    <p>some paragraph</p>
+  </div>
 </div>
   Welcome to the HTML Portfolio Project
 <div class="skills">
